# OpenSecDash

./: .gitignore  AGENTS.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.example.yml  docker-entrypoint.sh  pyrightconfig.json
backend/: alembic.ini  opensecdash.db  pyproject.toml  tailwind.config.js
backend/app/: main.py
backend/app/api/: __init__.py  action_forms.py  actions.py  assets.py  auth.py  events.py  instance.py  oidc_auth.py  oidc_settings.py  onboarding.py  pages.py  settings.py  users.py
backend/app/core/: i18n.py  input_limits.py  language.py  logging.py  net.py  plugin_registry.py  remote_urls.py  secrets.py  settings.py  template_context.py  time.py  version.py
backend/app/database/: dependencies.py  init_db.py  migrations.py  session.py
backend/app/locales/: de.py  (+2 more)
backend/dev-data/: apps-installed.json  crowdsec_sample.json
backend/migrations/: env.py
backend/tests/: conftest.py  test_access_page.py  test_action_forms.py  test_action_locks.py  test_action_plugin_hooks.py  test_action_registry.py  test_api_events.py  test_apps_inventory.py  test_asset_hosts.py  test_asset_metadata_redirect.py  test_asset_page_hosts.py  test_asset_plugin_routes.py  test_auth_break_glass_and_review.py  test_auth_gating.py  test_auth_onboarding_seed.py  test_auth_roles.py  test_auth_service.py  test_base_template.py  test_column_redirects.py  test_crowdsec_decisions.py  test_crowdsec_lapi.py  test_crowdsec_redirects.py  test_dashboard_insights.py  test_dashboard_layout.py  test_dashboard_metrics.py  test_dashboard_progressive_loading.py  test_dashboard_rollups.py  test_dashboard_template.py  test_dashboard_widgets.py  test_database_session.py  test_debug_report.py  test_diagnostics.py  test_diagnostics_stale.py  test_event_broadcaster.py  test_event_filters.py  test_event_search_concurrency.py  test_events.py  test_external_identity_migration.py  test_geoip.py  test_global_search.py  (+42 more)
(+272 files in other folders)
