[project]
name = "backend"
version = "0.0.0"
description = "OpenSecDash App Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "cryptography>=44.0.0",
    "fastapi>=0.138.2",
    "jinja2>=3.1.6",
    "paho-mqtt>=2.1.0",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "websockets>=14.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pyright>=1.1.411",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
